# exercises

bin_search/: .gitignore  Makefile  README.md  bench_binsearch_test.go  binsearch_test.go  main.go
bin_search/c_binsearch/: c_bench_binsearch.c  c_binsearch.c  c_binsearch.h
freqdict/: .gitignore  CMakeLists.txt  README.md  deps_install.sh
freqdict/bench/: CMakeLists.txt  trie_bench.cc
freqdict/include/: charnoder.h  hashmap.h  trie.h  wordsparser.cc  wordsparser.h
freqdict/src/: main.cc
freqdict/test/: CMakeLists.txt  charnoder_test.cc  main.cc  wordsparser_test.cc
